--- a/spot_app/templates/main_app/show_playlists.html
+++ b/spot_app/templates/main_app/show_playlists.html
@@ -1,8 +1,13 @@
 {% extends "base.html" %}
 {% block title %}User's playlists{% endblock %}
 {% block content %}
-Список моих плейлистов
-{% for name, id in playlists %}
-<p>{{name}}: {{id}}</p>
-{% endfor %}
-{% endblock %}
+<h1 class="mt-3">Список моих плейлистов</h1>
+<ul class="list-group">
+        {% for playlist in playlists %}
+        <li class="list-group-item"><a
+                        href="{% url 'playlist_tracks' playlist_id=playlist.playlist_id %}">{{playlist.name}}</a></li>
+        {% endfor %}
+        {% include "main_app/pagination.html" %}
+
+        <p><a href="{% url 'load_playlists' %}">Заполнить плейлисты</a></p>
+        {% endblock %}
