--- a/spot_app/templates/main_app/show_tracks.html
+++ b/spot_app/templates/main_app/show_tracks.html
@@ -3,38 +3,46 @@
 {% block content %}
 
 
-
 <h1 class="mt-3 mb-3">Список песен в плейлисте {{ playlist.name| upper}}</h1>
-<div class="mt-3" style="display: inline-block;">
-    <ul class="list-group mt-3">{% for track in tracks %}</ul>
-    <li class="list-group-item">
-        <div class="card" style="display: inline-block;">
-            {% comment %} может под видео <img src="..." class="card-img-top" alt="..."> {% endcomment %}
-            <div class="card-body">
-                <h5 class="card-title">{{track.name}}</h5>
+
+
+<div class="container-fluid">
+    <div class="row g-5">
+        {% for track in tracks %}
+        <div class="col-4">
+            <div class="p-3 border bg-light">
+                <h5>{{track.name}}</h5>
                 <p class="card-text">{{track.artist}}</p>
                 {% if track.youtube_id %}
-                {% comment %} <a href="{{track.youtube_link}}" target="_blank" class="btn btn-primary">Ссылка на
-                    клип</a>
-                {% endcomment %}
                 <iframe width="420" height="345" src="https://www.youtube.com/embed/{{track.youtube_id}}"></iframe>
-                {% else %}
-                <p>Ссылки на клип еще нет</p>
-                {% endif %}
-
             </div>
         </div>
-    </li>
-
-    {% empty %}
-    <li>Sorry, no tracks here</li>
-
-    {% endfor %}
-    {% include "main_app/pagination.html" %}
+        {% else %}
+        <p>Ссылки на клип еще нет</p>
+    </div>
 
 </div>
-<button class="submit"><a href="{% url 'tracks_load' playlist_id=playlist.playlist_id %}">Заполнить плейлист из
-        Spotify</a></button>
-<button class="submit"><a href="{% url 'link_videos' playlist_id=playlist.playlist_id %}">Слинковать видосы с
-        Youtube</a></button>
+{% endif %}
+{% empty %}
+<p>Sorry, no tracks here</p>
+
+</div>
+</div>
+{% endfor %}
+</div>
+{% include "main_app/pagination.html" %}
+
+
+
+<div class="mt-3">
+    <form action="{% url 'tracks_load' playlist_id=playlist.playlist_id %}"><button
+            class="submit btn btn-primary">Заполнить
+            треки из Spotify</button></form>
+</div>
+<div class="mt-3">
+    <form action="{% url 'link_videos' playlist_id=playlist.playlist_id %}"><button
+            class="submit btn btn-primary">Заполнить
+            треки c Youtube</button></form>
+</div>
 {% endblock %}
+</div>
