--- a/spot_app/templates/registration/login.html
+++ b/spot_app/templates/registration/login.html
@@ -11,6 +11,11 @@
     <form action="{% url 'login' %}" method="post">
         {{ form.as_p }}
         {% csrf_token %}
+        <li class="google">
+            <a href="{% url "social:begin" "google-oauth2" %}">
+                Login with Google
+            </a>
+        </li>
         <input type="hidden" name="next" value="{{ next }}" />
         <p><input type="submit" value="Log-in"></p>
     </form>
